modificado 19-3-2014 com segundo post

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     </div>
 
 	<h2> Meu primeiro Post</h2>
+	<p> 12/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
+    <p> Ultima aula aprendemos a mexer no git, a criar repositorios, já colocamos o primeiro post que é esse</p>
+
+    <h2> Meu Segundo Post</h2>
 	<p> 19/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
-    <p> Conteudo do post Conteudo do post Conteudo do post Conteudo do post
-    	Conteudo do post Conteudo do post Conteudo do post Conteudo do post 
-    	Conteudo do post Conteudo do post Conteudo do post Conteudo do post
-    	Conteudo do postConteudo do post Conteudo do post Conteudo do post</p>
+    <p> Na aula do dia 19 fizemos o blog, colocamos o logo a foto, o nome e ja adiconamos os comentarios, aprendemos a mexer com imagens esticar, fazer ela nao repetir.</p>
+
 </body>
 
 </html>
