--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
 <head>
 	<meta charset="UTF-8">
     <title> Blog do Baldochi</title>
-	
-	<Link rel="stylesheet" href="estilo.css">
-		
+	  <Link rel="stylesheet" href="estilo.css">
+
+
+
 </head>
 
 <body>
 	<div id="a1"> 
 	<img src="http://discoverymulher.uol.com.br/shared_content/uploads/2012/05/57443324-620x360.jpg" width="128" heigh="128">
 	<h1> Maykon Baldochi</h1>
+
+	<ul>
+      <li><a href="#">Sobre o Autor</a></li>
+      <li><a href="#">Teste</a></li>
+      <li><a href="#">Fale comigo</a></li>
+    </ul>
+
     </div>
 
 	<div id="a2">
@@ -24,6 +32,10 @@
        <h2> Meu Segundo Post</h2>
 	   <p> 19/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
        <p> Na aula do dia 19 fizemos o blog, colocamos o logo a foto, o nome e ja adiconamos os comentarios, aprendemos a mexer com imagens esticar, fazer ela nao repetir.</p>
+       <button>Leia Mais</button>
+       <h2> Meu Terceiro Post</h2>
+	   <p> 26/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
+       <p> Na aula do dia 26 fizemos o estilo.css aonde seta para todos nao precisando fazer um para cada pagina, coloquei também os menus sem links, coloquei o leia mais do primeiro post funcionando, abrindo outro html.</p>
        <button>Leia Mais</button>
     </div>
 </body>
