colocado o post1 e o css e os menus

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        <button>Leia Mais</button>
        <h2> Meu Terceiro Post</h2>
 	   <p> 26/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
-       <p> Na aula do dia 26 fizemos o estilo.css aonde seta para todos nao precisando fazer um para cada pagina, coloquei também os menus sem links, coloquei o leia mais do primeiro post funcionando, abrindo outro html.</p>
+       <p> Na aula do dia 26 fizemos o estilo.css setando o style para todas as paginas nao precisando fazer um para cada pagina, coloquei também os menus sem links, coloquei o leia mais do primeiro post funcionando, abrindo outro html.</p>
        <button>Leia Mais</button>
     </div>
 </body>
