colocado o post1 e o css e os menus

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 	<h1> Maykon Baldochi</h1>
 
 	<ul>
-      <li><a href="#">Sobre o Autor</a></li>
-      <li><a href="#">Teste</a></li>
-      <li><a href="#">Fale comigo</a></li>
+		<li><a href="index.html">Home</a></li>
+        <li><a href="#">Sobre o Autor</a></li>
+        <li><a href="#">Teste</a></li>
+        <li><a href="#">Fale comigo</a></li>
     </ul>
 
     </div>
