--- a/post_1.html
+++ b/post_1.html
@@ -12,7 +12,9 @@
 	<div id="a1"> 
 	<img src="http://discoverymulher.uol.com.br/shared_content/uploads/2012/05/57443324-620x360.jpg" width="128" heigh="128">
 	<h1> Maykon Baldochi</h1>
+	 
 	  <ul>
+	  	<li><a href="index.html">Home</a></li>
         <li><a href="#">Sobre o Autor</a></li>
         <li><a href="#">Teste</a></li>
         <li><a href="#">Fale comigo</a></li>
