--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
     <title> Blog do Baldochi</title>
-	  <Link rel="stylesheet" href="estilo.css">
+	  <Link rel="stylesheet" href="stylesheets/estilo.css">
 
 
 
@@ -12,7 +12,7 @@
 
 <body>
 	<div id="a1"> 
-	<img src="http://discoverymulher.uol.com.br/shared_content/uploads/2012/05/57443324-620x360.jpg" width="128" heigh="128">
+	<img src="images/foto.jpg" width="128" heigh="128">
 	<h1> Maykon Baldochi</h1>
 
 	<ul>
@@ -28,16 +28,20 @@
 
 	   <h2> Meu primeiro Post</h2>
 	   <p> 12/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
-       <p> Ultima aula aprendemos a mexer no git, a criar repositorios, já colocamos o primeiro post que é esse</p>
-       <button><a href="post_1.html">Leia Mais</a></li></button>
+       <p> </p>
+       <button><a href="posts/2014-03-12/index.html">Leia Mais</a></li></button>
        <h2> Meu Segundo Post</h2>
 	   <p> 19/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
-       <p> Na aula do dia 19 fizemos o blog, colocamos o logo a foto, o nome e ja adiconamos os comentarios, aprendemos a mexer com imagens esticar, fazer ela nao repetir.</p>
-       <button>Leia Mais</button>
+       <p> </p>
+       <button><a href="posts/2014-03-19/index.html">Leia Mais</a></li></button>
        <h2> Meu Terceiro Post</h2>
 	   <p> 26/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
-       <p> Na aula do dia 26 fizemos o estilo.css setando o style para todas as paginas nao precisando fazer um para cada pagina, coloquei também os menus sem links, coloquei o leia mais do primeiro post funcionando, abrindo outro html.</p>
-       <button>Leia Mais</button>
+       <p> </p>
+       <button><a href="posts/2014-03-26/index.html">Leia Mais</a></li></button>
+      <h2> Meu quarto Post</h2>
+     <p> 02/04/2014 <a href="#">autor: Maykon Baldochi</a></p>
+       <p> </p>
+       <button><a href="posts/2014-04-02/index.html">Leia Mais</a></li></button> 
     </div>
 </body>
 
