sobre o bootstrap e o layoutit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div id="a1"> 
-	<img src="images/foto.jpg" width="128" heigh="128">
+	<img src="images/foto.jpg" width="128" heigh="128" >
 	<h1> Maykon Baldochi</h1>
 
 	<ul>
@@ -34,6 +34,7 @@
 	   <p> 19/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
        <p> </p>
        <button><a href="posts/2014-03-19/index.html">Leia Mais</a></li></button>
+
        <h2> Meu Terceiro Post</h2>
 	   <p> 26/03/2014 <a href="#">autor: Maykon Baldochi</a></p>
        <p> </p>
@@ -42,6 +43,10 @@
      <p> 02/04/2014 <a href="#">autor: Maykon Baldochi</a></p>
        <p> </p>
        <button><a href="posts/2014-04-02/index.html">Leia Mais</a></li></button> 
+       <h2> Meu quinto Post</h2>
+       <p> 02/04/2014 <a href="#">autor: Maykon Baldochi</a></p>
+       <p> </p>
+       <button><a href="posts/2014-04-09/index.html">Leia Mais</a></li></button> 
     </div>
 </body>
 
