mudança de index

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
        <p> 02/04/2014 <a href="#">autor: Maykon Baldochi</a></p>
        <p> </p>
        <button><a href="posts/2014-04-09/index.html">Leia Mais</a></li></button> 
+       <h2> Meu Sexto Post</h2>
+       <p> 23/04/2014 <a href="#">autor: Maykon Baldochi</a></p>
+       <p> </p>
+       <button><a href="posts/2014-04-23/index.html">Leia Mais</a></li></button> 
     </div>
 </body>
 
